# system-monitor

./: Cargo.toml  README.md
src/: lib.rs  main.rs  process.rs  sysinfo.rs
src/app/: app.rs  layout.rs  mainframe.rs  mod.rs
